templates/postgres/service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: postgres

spec:
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: immich
  ports:
    - name: postgres
      port: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-hl

spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: immich
  ports:
    - name: postgres
      port: 5432
