templates/postgres/networkpolicy.yml
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/part-of: immich
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
      ports:
        - protocol: TCP
          port: 5432
